# HDR-Athero

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml  setup_github.sh
docs/: controllers.md  literature_sources.md  model_specification.md  testing_guide.md
hdr_athero/: __init__.py
hdr_athero/analysis/: latent_recovery.py  observation_model.py  spectral.py
hdr_athero/model/: parameters.py  slds.py  sources.py
hdr_athero/simulation/: __main__.py  controller.py  run.py
results/: simulation_output.txt  spectral_summary.txt  test_report.txt
tests/: test_athero.py  test_latent_recovery.py
