[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdr-athero"
version = "0.1.0"
description = "Literature-calibrated 4-axis atherosclerosis model for HDR v5.4"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Todd White", email = "todd@thalion.org"}]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["hdr_athero*"]
